--- a/first.html
+++ b/first.html
@@ -68,16 +68,16 @@
 							Отборочный этап проводится в два дистанционных тура и завершается не позднее 20 февраля 2020 г. Сроки и даты проведения туров отборочного этапа определяется организационным комитетом олимпиады. 
 						</p>
 												<p>
-							В олимпиаде на добровольной основе принимают участие школьники 7–11 классов (далее – школьники) образовательных учреждений, осваивающие общеобразовательные программы среднего (полного) общего образования.
+							Каждый из двух туров отборочного этапа проводится не менее 5 (пяти) календарных дней в соответствии с опубликованным расписанием. Продолжительность тура отборочного этапа составляет 180 минут с момента его активации участником.
 						</p>
 												<p>
-							В олимпиаде на добровольной основе принимают участие школьники 7–11 классов (далее – школьники) образовательных учреждений, осваивающие общеобразовательные программы среднего (полного) общего образования.
+							После активации тура отборочного этапа участник на своей персональной странице получает полный перечень заданий соответствующего тура с указанием количества баллов каждого задания. Участник имеет возможность выбрать предпочтительный для него порядок решения задач.
 						</p>
 												<p>
-							В олимпиаде на добровольной основе принимают участие школьники 7–11 классов (далее – школьники) образовательных учреждений, осваивающие общеобразовательные программы среднего (полного) общего образования.
+							В случае внештатного технического сбоя в системе проведения олимпиад участнику назначается повторное прохождение тура в том случае, если технический сбой произошел в течение активности тура участника.
 						</p>
 												<p>
-							В олимпиаде на добровольной основе принимают участие школьники 7–11 классов (далее – школьники) образовательных учреждений, осваивающие общеобразовательные программы среднего (полного) общего образования.
+							Участник имеет право принять участие сразу во втором туре отборочного этапа – участие в первом туре отборочного этапа не является обязательным для участия во втором туре отборочного этапа.
 						</p>
 					</div>
 				</div>
