--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 		<link rel="stylesheet" href="css/styles.css" type="text/css">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
+		<style>
+		footer{
+			margin-top: 80px;
+  	  background: #7e7e7e;
+  	  color: #dbdbdb;
+  	  font-size: 11px;
+			position:relative;
+		}
+		</style>
 	</head>
 	<body>
 		<header>
@@ -49,7 +58,12 @@
 		</header>
 		<section class="content-top">
 			<div class="wrapper">
-				<h2>Мы учимся, увы, для школы, а не для жизни. (Сенека Луций Анней)</h2>
+				<h2>
+					<div class="wrapper-txt">
+					<p>Мы учимся, увы для школы, а не для жизни.</p>
+					<span>Сенека Луций Анней</span>
+					</div>
+				</h2>
 				<blockquote>
 					<p>
 						В олимпиаде на добровольной основе принимают участие школьники 7–11 классов образовательных учреждений, осваивающие общеобразовательные программы среднего (полного) общего образования.
@@ -62,12 +76,15 @@
 				<h2>
 					Олимпиада проводится с 1 сентября 2019 г. по 31 марта 2020 г. в два этапа – дистанционный отборочный и очный заключительный.
 				</h2>
+				<div class="wrapper-txt2">
+				<h2>
+				<p> Цели олимпиады:</p>
+				</h2>
+				</div>
 				<div class="block-wrap">
 					<div class="block-section">
 						<a href="">
-							<div class="title">
-								
-							</div>
+
 							<figure>
 								<img src="images/1.jpg" alt="">
 							</figure>
@@ -76,9 +93,7 @@
 					</div>
 					<div class="block-section">
 						<a href="">
-							<div class="title">
-								<span></span>
-							</div>
+
 							<figure>
 								<img src="images/2.jpg" alt="">
 							</figure>
@@ -87,9 +102,6 @@
 					</div>
 					<div class="block-section">
 						<a href="">
-							<div class="title">
-								<span></span>
-							</div>
 							<figure>
 								<img src="images/1.jpg" alt="">
 							</figure>
@@ -98,9 +110,7 @@
 					</div>
 					<div class="block-section">
 						<a href="">
-							<div class="title">
-								<span></span>
-							</div>
+
 							<figure>
 								<img src="images/2.jpg" alt="">
 							</figure>
