--- a/second-2.html
+++ b/second-2.html
@@ -6,6 +6,26 @@
 		<link rel="stylesheet" href="css/styles.css" type="text/css">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
+		<style>
+		footer{
+			margin-top: 80px;
+  	  background: #7e7e7e;
+  	  color: #dbdbdb;
+  	  font-size: 11px;
+			position:absolute;
+		}
+		</style>
+		<script>
+		function myFunction(){
+		 var num = document.getElementById("myinput").value;
+		 
+		 if(num == 2){
+		 document.getElementById("answ").innerHTML = "верно";
+		}
+		else {
+		 document.getElementById("answ").innerHTML = "неверно";
+		}}
+    </script>
 	</head>
 	<body>
 		<header>
@@ -63,25 +83,29 @@
 					</div>
 					<div class="conent-first">
 						<h2>Телекоммуникационные технологии</h2>
-						<p>
-						Телекоммуникационные технологии,Телекоммуникационные технологии,Телекоммуникационные технологии,Телекоммуникационные технологии
-						</p>
-												<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
-												<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
+						<div class="content-wrap">
+							<div class="content-main">
+								<h3>Задание</h3>
+								<p>Студенты Иван и Петр изучают сетевые технологии. В среде моделирования они собрали прототип системы DNS. В их модели за каждый домен отвечает отдельный DNS-сервер. Кэширование отсутствует. В модель добавлены клиентский компьютер C1 и обслуживающий его DNS сервер – D1.
+									Клиентский компьютер запросил IP-адрес по доменному имени «dataserver.dom3.dom2.dom1.local.» Разрешение имени произошло успешно.
+									</p>
+									<p>
+									Определите суммарное количество запросов
+									 и ответов, которые совершил и получил сервер D1 при разрешении имени, при условии, что нерекурсивными оказались только сервера доменов «.» и «local».
+									 При подсчете не учитывать диалог между D1 и С1.
+									 </p>
+									 <p>
+									 В ответ укажите целое число.
+									</p>
+								<div class="ansver">
+									<input type="text" value="" id="myinput">
+								</div>
+								<div class="btn">
+									<button onclick="myFunction()">Отправить</button>
+									<p id = "answ"></p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
