--- a/second.html
+++ b/second.html
@@ -55,8 +55,8 @@
 						<aside>
 							<nav>
 								<ul class="aside-menu">
-									<li><a href="/etiam/">Электронные таблицы</a></li>
-									<li><a href="/phasellus/">Телекоммуникационные технологии</a></li>
+									<li><a href="second-1.html">Электронные таблицы</a></li>
+									<li><a href="second-2.html">Телекоммуникационные технологии</a></li>
 								</ul>
 							</nav>
 						</aside>
