--- a/first-1.html
+++ b/first-1.html
@@ -1,43 +1,122 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
-		<meta charset="UTF-8">
-		<title>Первый отборочный тур</title>
-		<link rel="stylesheet" href="css/styles.css" type="text/css">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
-	</head>
-	<body>
-		<header>
+<head>
+	<meta charset="UTF-8">
+	<title>Первый отборочный тур</title>
+	<link rel="stylesheet" href="css/styles.css" type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
+	<style>
+	footer{
+		margin-top: 80px;
+		background: #7e7e7e;
+		color: #dbdbdb;
+		font-size: 11px;
+		position:absolute;
+	}
+	</style>
+	<script>
+		function myFunction(){
+		 var num = document.getElementById("myinput").value;
+		 
+		 if(num == 17){
+		 document.getElementById("answ").innerHTML = "верно";
+		}
+		else {
+		 document.getElementById("answ").innerHTML = "неверно";
+		}}
+    </script>
+</head>
+<body>
+	<header>
+		<div class="wrapper">
+			<div class="header-top">
+				<div class="logo">
+					<a href="#">Logo
+						<span></span>
+						<span></span>
+						<span></span>
+					</a>
+				</div>
+				<div class="name">
+					<h1>Подготовка к олимпиадам по информатике</h1>
+				</div>
+				<div class="social">
+					<a href="#">
+						<img src="images/ff.png" alt="">
+					</a>
+					<a href="">
+						<img src="images/inst.png" alt="">
+					</a>
+					<a href="">
+						<img src="images/wk.png" alt="">
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="header-menu">
 			<div class="wrapper">
-				<div class="header-top">
-					<div class="logo">
-						<a href="#">Logo
-							<span></span>
-							<span></span>
-							<span></span>
-						</a>
-					</div>
-					<div class="name">
-						<h1>Подготовка к олимпиадам по информатике</h1>
-					</div>
-					<div class="social">
-						<a href="#">
-							<img src="images/ff.png" alt="">
-						</a>
-						<a href="">
-							<img src="images/inst.png" alt="">
-						</a>
-						<a href="">
-							<img src="images/wk.png" alt="">
-						</a>
+				<nav>
+					<ul class="top-menu">
+						<li><a href="index.html">Главная</a></li>
+						<li><a href="final.html">Заключительный этап</a></li>
+						<li><a href="first.html">Первый отборочный тур</a></li>
+						<li><a href="second.html">Второй отборочный тур</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
+	<section class="content-top">
+		<div class="wrapper">
+			<div class="wrapper-block">
+				<div class="left-sidebar">
+					<h2>Меню</h2>
+					<aside>
+						<nav>
+							<ul class="aside-menu">
+								<li><a href="first-1.html">Системы счисления</a></li>
+								<li><a href="first-2.html">Количество информации</a></li>
+								<li><a href="first-3.html">Основы логики</a></li>
+							</ul>
+						</nav>
+					</aside>
+				</div>
+				<div class="conent-first">
+					<h2>Системы счисления</h2>
+					<div class="content-wrap">
+						<div class="content-main">
+							<h3>1.Системы счисления : [Найди единицу]</h3>
+							<p>
+								Определите количество натуральных чисел меньших 200<sub>10</sub>
+​​ , для которых выполняется условие: в записях числа в шестеричной и двенадцатеричной системах счисления в младшем разряде стоит цифра.
+							</p>
+							<div class="ansver">
+									<input type="text" value="" id="myinput">
+								</div>
+								<div class="btn">
+									<button onclick="myFunction()">Отправить</button>
+									<p id = "answ"></p>
+								</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="header-menu">
-				<div class="wrapper">
+		</div>
+	</section>
+	<footer>
+		<div class="wrapper">
+			<div class="header-top">
+				<div class="logo-footer">
+					<a href="#">Logo
+						<span></span>
+						<span></span>
+						<span></span>
+					</a>
+				</div>
+				<div class="footer-menu">
 					<nav>
-						<ul class="top-menu">
+						<ul class="footer-nav">
 							<li><a href="index.html">Главная</a></li>
 							<li><a href="final.html">Заключительный этап</a></li>
 							<li><a href="first.html">Первый отборочный тур</a></li>
@@ -45,84 +124,19 @@
 						</ul>
 					</nav>
 				</div>
-			</div>
-		</header>
-		<section class="content-top">
-			<div class="wrapper">
-				<div class="wrapper-block">
-					<div class="left-sidebar">
-						<h2>Меню</h2>
-						<aside>
-							<nav>
-								<ul class="aside-menu">
-									<li><a href="first-1.html">Системы счисления</a></li>
-									<li><a href="first-2.html">Количество информации</a></li>
-									<li><a href="first-3.html">Основы логики</a></li>
-								</ul>
-							</nav>
-						</aside>
-					</div>
-					<div class="conent-first">
-						<h2>Системы счисления</h2>
-						<p>
-						Системы счисления,Системы счисления,Системы счисления,Системы счисления,Системы счисления,Системы счисления,Системы счисления,Системы счисления,Системы счисления
-						</p>
-												<p>
-						Системы счисления,Системы счисления,Системы счисления,Системы счисления,Системы счисления,Системы счисления,Системы счисления,Системы счисления,Системы счисления
-						</p>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
-												<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
-					</div>
+				<div class="social">
+					<a href="#">
+						<img src="images/ff.png" alt="">
+					</a>
+					<a href="">
+						<img src="images/inst.png" alt="">
+					</a>
+					<a href="">
+						<img src="images/wk.png" alt="">
+					</a>
 				</div>
 			</div>
-		</section>
-		<footer>
-			<div class="wrapper">
-				<div class="header-top">
-					<div class="logo-footer">
-						<a href="#">Logo
-							<span></span>
-							<span></span>
-							<span></span>
-						</a>
-					</div>
-					<div class="footer-menu">
-						<nav>
-							<ul class="footer-nav">
-								<li><a href="index.html">Главная</a></li>
-								<li><a href="final.html">Заключительный этап</a></li>
-								<li><a href="first.html">Первый отборочный тур</a></li>
-								<li><a href="second.html">Второй отборочный тур</a></li>
-							</ul>
-						</nav>
-					</div>
-					<div class="social">
-						<a href="#">
-							<img src="images/ff.png" alt="">
-						</a>
-						<a href="">
-							<img src="images/inst.png" alt="">
-						</a>
-						<a href="">
-							<img src="images/wk.png" alt="">
-						</a>
-					</div>
-				</div>
-			</div>
-		</footer>
-	</body>
+		</div>
+	</footer>
+</body>
 </html>
