--- a/second-1.html
+++ b/second-1.html
@@ -6,6 +6,26 @@
 		<link rel="stylesheet" href="css/styles.css" type="text/css">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
+		<style>
+		footer{
+			margin-top: 80px;
+  	  background: #7e7e7e;
+  	  color: #dbdbdb;
+  	  font-size: 11px;
+			position: relative;
+		}
+		</style>
+		<script>
+		function myFunction(){
+		 var num = document.getElementById("myinput").value;
+		 
+		 if(num == 231){
+		 document.getElementById("answ").innerHTML = "верно";
+		}
+		else {
+		 document.getElementById("answ").innerHTML = "неверно";
+		}}
+    </script>
 	</head>
 	<body>
 		<header>
@@ -63,25 +83,41 @@
 					</div>
 					<div class="conent-first">
 						<h2>Электронные таблицы</h2>
-						<p>
-						Электронные таблицы,Электронные таблицы,Электронные таблицы,Электронные таблицы,Электронные таблицы,Электронные таблицы,Электронные таблицы
-						</p>
-												<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
-												<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
+						<div class="content-wrap">
+							<div class="content-main">
+								<h3>Задание
+								</h3>
+								<p>
+									Дан фрагмент таблицы в режиме отображения формул:.
+							    </p>
+									<p>
+										<img src="images/kot.png" alt="">
+									</p>
+								<p>
+									Ячейку D2 скопировали во все ячейки диапазона D3:D9. Ячейку E2 скопировали во все ячейки диапазона E3:E9.
+									Ячейку F2 скопировали во все ячейки диапазона F3:F9.
+								</p>
+								<p>
+								Определите на какие ячейки были установлены ссылки в формуле в ячейке E2 до копирования, если:
+								</p>
+									<p>
+							<p>Х1, Х2, Х3 указывают на разные ячейки диапазона A2:C2. </p>
+										<p>Eсли последовательность 1 и 0 полученных в диапазоне ячеек F2:F9 представить в виде двоичного восьмиразрядного  числа, у которого самым старшим разрядом является значение указанное в ячейке F9, а младший соответствует значению ячейки F2 и перевести в десятичную систему счисления, то оно будет иметь значение 170.</p>
+								
+								 </p>
+								<p>
+										В ответе запишите, без пробелов и запятых, сначала значение Х1, затем Х2, затем Х3.
+							    </p>
+								<div class="ansver">
+									<input type="text" value="" id="myinput">
+								</div>
+								<div class="btn">
+									<button onclick="myFunction()">Отправить</button>
+									<p id = "answ"></p>
+								</div>
+							
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
